feat: added whitelist paths + get Account infos
